# scalc-interpreter

./: CMakeLists.txt  File_interperter.cpp  Line_interperter.cpp  README.md  environment.cpp  environment.hpp  expression.cpp  expression.hpp  interpreter.cpp  interpreter.hpp  test_interpreter.cpp  unit_tests.cpp
